# semCache

./: .gitignore  README.md
js/: .gitignore  README.md  package-lock.json  package.json
js/examples/: demo.ts
js/src/: core.ts  dashboardHtml.ts  embeddings.ts  index.ts  server.ts  store.ts
js/tests/: semcache.test.ts
python/: README.md  pyproject.toml
python/semcache/: __init__.py  core.py  embeddings.py  store.py
python/tests/: test_semcache.py
