[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanshulgoyal101-semcache"
version = "1.0.0"
description = "Zero-cost, low-latency tiered semantic caching SDK for LLMs running local embeddings."
readme = "README.md"
authors = [
    { name = "Antigravity", email = "support@antigravity.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0"
]
